Trying to fix those damn checkboxes

--- a/assets/less/base/debug.less
+++ b/assets/less/base/debug.less
@@ -7,7 +7,7 @@
 // =======================================================================*/
 
 .debugger {
-    background-color: @COLOR-GreyLighter;
+    background-color: @COLOR-GreyLightest;
     position: fixed;
     top: 40px;
     right: 40px;
