--- a/assets/less/base/prettify.less
+++ b/assets/less/base/prettify.less
@@ -15,7 +15,7 @@
 @PRETTIFY-Punctuation:          @COLOR-GreyLighter;
 @PRETTIFY-Plaintext:            @COLOR-GreyLighter;
 @PRETTIFY-Tag:                  @COLOR-Pink;
-@PRETTIFY-Attribute:            @COLOR-Lime;
+@PRETTIFY-Attribute:            @COLOR-Emerald;
 @PRETTIFY-AttributeValue:       @COLOR-YellowLight;
 @PRETTIFY-Decimal:              @COLOR-GreyLighter;
 
