--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -17,19 +17,21 @@
 @COLOR-Black:					#000000;
 @COLOR-White:					#FFFFFF;
 
-@COLOR-RedLightest:				#FFEBEE;
+@COLOR-RedLightest:				#F2BDC2;
 @COLOR-RedLighter:				#FFCDD2;
 @COLOR-RedLight:				#E57373;
 @COLOR-Red:						#F44336;
 @COLOR-RedDark:					#D32F2F;
 @COLOR-RedDarker:				#B71C1C;
+@COLOR-RedDarkest:				#B71C1C;
 
-@COLOR-PinkLightest:			#FCE4EC;
-@COLOR-PinkLighter:				#F8BBD0;
-@COLOR-PinkLight:				#F06292;
-@COLOR-Pink:					#E91E63;
-@COLOR-PinkDark:				#C2185B;
-@COLOR-PinkDarker:				#880E4F;
+@COLOR-PinkLightest:			#ECC4E1;
+@COLOR-PinkLighter:				#E4A0CF;
+@COLOR-PinkLight:				#DA77BB;
+@COLOR-Pink:					#CF4BA2;
+@COLOR-PinkDark:				#A7347A;
+@COLOR-PinkDarker:				#84255C;
+@COLOR-PinkDarkest:				#681E46;
 
 @COLOR-PurpleLightest:			#F3E5F5;
 @COLOR-PurpleLighter:			#E1BEE7;
@@ -37,6 +39,7 @@
 @COLOR-Purple:					#9C27B0;
 @COLOR-PurpleDark:				#7B1FA2;
 @COLOR-PurpleDarker:			#4A148C;
+@COLOR-PurpleDarkest:			#4A148C;
 
 @COLOR-IndigoLightest:			#E8EAF6;
 @COLOR-IndigoLighter:			#C5CAE9;
@@ -44,6 +47,7 @@
 @COLOR-Indigo:					#3F51B5;
 @COLOR-IndigoDark:				#303F9F;
 @COLOR-IndigoDarker:			#1A237E;
+@COLOR-IndigoDarkest:			#1A237E;
 
 @COLOR-BlueLightest:			#E3F2FD;
 @COLOR-BlueLighter:				#BBDEFB;
@@ -51,6 +55,7 @@
 @COLOR-Blue:					#2196F3;
 @COLOR-BlueDark:				#1976D2;
 @COLOR-BlueDarker:				#0D47A1;
+@COLOR-BlueDarkest:				#0D47A1;
 
 @COLOR-CyanLightest:			#E0F7FA;
 @COLOR-CyanLighter:				#B2EBF2;
@@ -58,6 +63,7 @@
 @COLOR-Cyan:					#00BCD4;
 @COLOR-CyanDark:				#0097A7;
 @COLOR-CyanDarker:				#006064;
+@COLOR-CyanDarkest:				#006064;
 
 @COLOR-TealLightest:			#E0F2F1;
 @COLOR-TealLighter:				#B2DFDB;
@@ -65,48 +71,70 @@
 @COLOR-Teal:					#009688;
 @COLOR-TealDark:				#00796B;
 @COLOR-TealDarker:				#004D40;
+@COLOR-TealDarkest:				#004D40;
 
-@COLOR-GreenLightest:			#E8F5E9;
-@COLOR-GreenLighter:			#C8E6C9;
-@COLOR-GreenLight:				#81C784;
-@COLOR-Green:					#4CAF50;
-@COLOR-GreenDark:				#388E3C;
-@COLOR-GreenDarker:				#1B5E20;
+// DONE
+@COLOR-GreenLightest:			#DCECC9;
+@COLOR-GreenLighter:			#C9E3A7;
+@COLOR-GreenLight:				#B3D87F;
+@COLOR-Green:					#9ACC54;
+@COLOR-GreenDark:				#69A53A;
+@COLOR-GreenDarker:				#458429;
+@COLOR-GreenDarkest:			#2D6821;
 
-@COLOR-LimeLightest:			#F9FBE7;
-@COLOR-LimeLighter:				#F0F4C3;
-@COLOR-LimeLight:				#DCE775;
-@COLOR-Lime:					#CDDC39;
-@COLOR-LimeDark:				#AFB42B;
-@COLOR-LimeDarker:				#827717;
+// DONE
+@COLOR-EmeraldLightest:			#B5E5C7;
+@COLOR-EmeraldLighter:			#9CDDB4;
+@COLOR-EmeraldLight:			#7ED19B;
+@COLOR-Emerald:					#62C884;
+@COLOR-EmeraldDark:				#41A158;
+@COLOR-EmeraldDarker:			#297F39;
+@COLOR-EmeraldDarkest:			#21652A;
 
-@COLOR-YellowLightest:			#FFFDE7;
-@COLOR-YellowLighter:			#FFF9C4;
-@COLOR-YellowLight:				#FFF176;
-@COLOR-Yellow:					#FFEB3B;
-@COLOR-YellowDark:				#FBC02D;
-@COLOR-YellowDarker:			#F57F17;
+// DONE
+@COLOR-YellowLightest:			#EEE5BD;
+@COLOR-YellowLighter:			#E8D692;
+@COLOR-YellowLight:				#E0C663;
+@COLOR-Yellow:					#D7B431;
+@COLOR-YellowDark:				#B18A28;
+@COLOR-YellowDarker:			#8D6821;
+@COLOR-YellowDarkest:			#704E21;
 
-@COLOR-OrangeLightest:			#FFF3E0;
-@COLOR-OrangeLighter:			#FFE0B2;
-@COLOR-OrangeLight:				#FFB74D;
-@COLOR-Orange:					#FF9800;
-@COLOR-OrangeDark:				#F57C00;
-@COLOR-OrangeDarker:			#E65100;
+// DONE
+@COLOR-OrangeLightest:			#F7E0B6;
+@COLOR-OrangeLighter:			#F6CF88;
+@COLOR-OrangeLight:				#F5BC54;
+@COLOR-Orange:					#F5A61D;
+@COLOR-OrangeDark:				#D37A1B;
+@COLOR-OrangeDarker:			#B2581C;
+@COLOR-OrangeDarkest:			#924223;
 
-@COLOR-BrownLightest:			#EFEBE9;
-@COLOR-BrownLighter:			#D7CCC8;
-@COLOR-BrownLight:				#A1887F;
-@COLOR-Brown:					#795548;
-@COLOR-BrownDark:				#5D4037;
-@COLOR-BrownDarker:				#3E2723;
+// DONE
+@COLOR-RustLightest:			#F7D1C0;
+@COLOR-RustLighter:			    #F6B698;
+@COLOR-RustLight:				#F5966B;
+@COLOR-Rust:					#F5733A;
+@COLOR-RustDark:				#D34A2B;
+@COLOR-RustDarker:			    #B33025;
+@COLOR-RustDarkest:			    #911E21;
 
-@COLOR-GreyLightest:			#FAFAFA;
-@COLOR-GreyLighter:				#F5F5F5;
-@COLOR-GreyLight:				#E0E0E0;
-@COLOR-Grey:					#9E9E9E;
-@COLOR-GreyDark:				#616161;
-@COLOR-GreyDarker:				#212121;
+// DONE
+@COLOR-BrownLightest:			#B7A2A0;
+@COLOR-BrownLighter:			#A1847F;
+@COLOR-BrownLight:				#866259;
+@COLOR-Brown:					#693D32;
+@COLOR-BrownDark:				#442C27;
+@COLOR-BrownDarker:				#2B2221;
+@COLOR-BrownDarkest:			#1D1E21;
+
+// DONE
+@COLOR-GreyLightest:			#D7DAE0;
+@COLOR-GreyLighter:				#C0C5CD;
+@COLOR-GreyLight:				#A6ADB6;
+@COLOR-Grey:					#8A949F;
+@COLOR-GreyDark:				#556375;
+@COLOR-GreyDarker:				#324156;
+@COLOR-GreyDarkest:				#1D2C41;
 
 @COLOR-Base:                    @COLOR-Blue;
 
@@ -129,21 +157,21 @@
 // ----------------------------------------------------
 
 @Z-INDEX-Level0:				0;		// Page
-@Z-INDEX-Level1:				1000;	// Page
-@Z-INDEX-Level2:				2000;	// Page
-@Z-INDEX-Level3:				3000;	// Page
-@Z-INDEX-Level4:				4000;	// Alerts
-@Z-INDEX-Level5:				5000;	// Navigation
-@Z-INDEX-Level6:				6000;	// Header
-@Z-INDEX-Level7:				7000;	// Takeover
-@Z-INDEX-Level8:				8000;	// Flyout
-@Z-INDEX-Level9:				9000;	// Toast
-@Z-INDEX-Level10:				9999;	// System
+@Z-INDEX-Level1:				100;	// Page
+@Z-INDEX-Level2:				200;	// Page
+@Z-INDEX-Level3:				300;	// Page
+@Z-INDEX-Level4:				400;	// Alerts
+@Z-INDEX-Level5:				500;	// Navigation
+@Z-INDEX-Level6:				600;	// Header
+@Z-INDEX-Level7:				700;	// Takeover
+@Z-INDEX-Level8:				800;	// Flyout
+@Z-INDEX-Level9:				900;	// Toast
+@Z-INDEX-Level10:				2000;	// System
 
 // TYPOGRAPHY
 // ----------------------------------------------------
 
-@TYPE-FontSize:                 14;
+@TYPE-FontSize:                 16;
 @TYPE-LineHeight:               24;
 @TYPE-FontFamily:               Arial, Helvetica, sans-serif;
 @TYPE-MonoSpaceFontFamily:      Consolas, monospace;
@@ -158,7 +186,7 @@
 @TYPE-SIZE-Delta:               18;
 @TYPE-SIZE-Epsilon:             16;
 @TYPE-SIZE-Zeta:                15;
-@TYPE-SIZE-Eta:                 @TYPE-FontSize;
+@TYPE-SIZE-Eta:                 14;
 @TYPE-SIZE-Iota:                12;
 
 @TYPE-CodeFontFamily:           Monaco, Courier New, monospace, serif;
