Colours updated to V1

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -17,120 +17,113 @@
 @COLOR-Black:					#000000;
 @COLOR-White:					#FFFFFF;
 
-@COLOR-RedLightest:				#F2BDC2;
-@COLOR-RedLighter:				#FFCDD2;
-@COLOR-RedLight:				#E57373;
-@COLOR-Red:						#F44336;
-@COLOR-RedDark:					#D32F2F;
-@COLOR-RedDarker:				#B71C1C;
-@COLOR-RedDarkest:				#B71C1C;
+@COLOR-RedLightest:				#FAE8EB;
+@COLOR-RedLighter:				#F5BDC3;
+@COLOR-RedLight:				#ED8288;
+@COLOR-Red:						#E2383D;
+@COLOR-RedDark:					#BC2A2D;
+@COLOR-RedDarker:				#9B2123;
+@COLOR-RedDarkest:				#7C1E21;
 
-@COLOR-PinkLightest:			#ECC4E1;
-@COLOR-PinkLighter:				#E4A0CF;
-@COLOR-PinkLight:				#DA77BB;
-@COLOR-Pink:					#CF4BA2;
-@COLOR-PinkDark:				#A7347A;
-@COLOR-PinkDarker:				#84255C;
-@COLOR-PinkDarkest:				#681E46;
+@COLOR-PinkLightest:			#F8EDF2;
+@COLOR-PinkLighter:				#EECCD7;
+@COLOR-PinkLight:				#E09DB1;
+@COLOR-Pink:					#CC5E7B;
+@COLOR-PinkDark:				#A33F4F;
+@COLOR-PinkDarker:				#812932;
+@COLOR-PinkDarkest:				#641E21;
 
-@COLOR-PurpleLightest:			#F3E5F5;
-@COLOR-PurpleLighter:			#E1BEE7;
-@COLOR-PurpleLight:				#BA68C8;
-@COLOR-Purple:					#9C27B0;
-@COLOR-PurpleDark:				#7B1FA2;
-@COLOR-PurpleDarker:			#4A148C;
-@COLOR-PurpleDarkest:			#4A148C;
+@COLOR-PurpleLightest:			#F0E5EF;
+@COLOR-PurpleLighter:			#E1C6DC;
+@COLOR-PurpleLight:				#D0A3C5;
+@COLOR-Purple:					#BB7AAA;
+@COLOR-PurpleDark:				#8F4E83;
+@COLOR-PurpleDarker:			#6C3065;
+@COLOR-PurpleDarkest:			#511E4E;
 
-@COLOR-IndigoLightest:			#E8EAF6;
-@COLOR-IndigoLighter:			#C5CAE9;
-@COLOR-IndigoLight:				#7986CB;
-@COLOR-Indigo:					#3F51B5;
-@COLOR-IndigoDark:				#303F9F;
-@COLOR-IndigoDarker:			#1A237E;
-@COLOR-IndigoDarkest:			#1A237E;
+@COLOR-IndigoLightest:			#ECE8F7;
+@COLOR-IndigoLighter:			#D5CDF0;
+@COLOR-IndigoLight:				#BDAEE6;
+@COLOR-Indigo:					#9E8ADB;
+@COLOR-IndigoDark:				#6D5AB9;
+@COLOR-IndigoDarker:			#49389A;
+@COLOR-IndigoDarkest:			#31237E;
 
-@COLOR-BlueLightest:			#E3F2FD;
-@COLOR-BlueLighter:				#BBDEFB;
-@COLOR-BlueLight:				#64B5F6;
-@COLOR-Blue:					#2196F3;
-@COLOR-BlueDark:				#1976D2;
-@COLOR-BlueDarker:				#0D47A1;
-@COLOR-BlueDarkest:				#0D47A1;
+@COLOR-BlueLightest:			#DEECF8;
+@COLOR-BlueLighter:				#B6D7F1;
+@COLOR-BlueLight:				#8CBFE9;
+@COLOR-Blue:					#5AA2E0;
+@COLOR-BlueDark:				#3C75BE;
+@COLOR-BlueDarker:				#28549F;
+@COLOR-BlueDarkest:				#1D3C82;
 
-@COLOR-CyanLightest:			#E0F7FA;
-@COLOR-CyanLighter:				#B2EBF2;
-@COLOR-CyanLight:				#4DD0E1;
-@COLOR-Cyan:					#00BCD4;
-@COLOR-CyanDark:				#0097A7;
-@COLOR-CyanDarker:				#006064;
-@COLOR-CyanDarkest:				#006064;
+@COLOR-CyanLightest:			#D9F0F5;
+@COLOR-CyanLighter:				#A9E0E9;
+@COLOR-CyanLight:				#79CEDD;
+@COLOR-Cyan:					#41B7CC;
+@COLOR-CyanDark:				#2E8DA9;
+@COLOR-CyanDarker:				#226C89;
+@COLOR-CyanDarkest:				#1D526F;
 
-@COLOR-TealLightest:			#E0F2F1;
-@COLOR-TealLighter:				#B2DFDB;
-@COLOR-TealLight:				#4DB6AC;
-@COLOR-Teal:					#009688;
-@COLOR-TealDark:				#00796B;
-@COLOR-TealDarker:				#004D40;
-@COLOR-TealDarkest:				#004D40;
+@COLOR-TealLightest:			#DCF1F0;
+@COLOR-TealLighter:				#B0E2DD;
+@COLOR-TealLight:				#83D2C7;
+@COLOR-Teal:					#4EBEAC;
+@COLOR-TealDark:				#359685;
+@COLOR-TealDarker:				#257467;
+@COLOR-TealDarkest:				#1D5A50;
 
-// DONE
-@COLOR-GreenLightest:			#DCECC9;
-@COLOR-GreenLighter:			#C9E3A7;
-@COLOR-GreenLight:				#B3D87F;
+@COLOR-GreenLightest:			#EAF4E0;
+@COLOR-GreenLighter:			#D3E8B6;
+@COLOR-GreenLight:				#B9DC88;
 @COLOR-Green:					#9ACC54;
 @COLOR-GreenDark:				#69A53A;
 @COLOR-GreenDarker:				#458429;
 @COLOR-GreenDarkest:			#2D6821;
 
-// DONE
-@COLOR-EmeraldLightest:			#B5E5C7;
-@COLOR-EmeraldLighter:			#9CDDB4;
-@COLOR-EmeraldLight:			#7ED19B;
+@COLOR-EmeraldLightest:			#DFF3E8;
+@COLOR-EmeraldLighter:			#B8E6CB;
+@COLOR-EmeraldLight:			#8FD8AA;
 @COLOR-Emerald:					#62C884;
 @COLOR-EmeraldDark:				#41A158;
 @COLOR-EmeraldDarker:			#297F39;
 @COLOR-EmeraldDarkest:			#21652A;
 
-// DONE
-@COLOR-YellowLightest:			#EEE5BD;
-@COLOR-YellowLighter:			#E8D692;
-@COLOR-YellowLight:				#E0C663;
+@COLOR-YellowLightest:			#F5F0D9;
+@COLOR-YellowLighter:			#ECDEA4;
+@COLOR-YellowLight:				#E3CB6D;
 @COLOR-Yellow:					#D7B431;
 @COLOR-YellowDark:				#B18A28;
 @COLOR-YellowDarker:			#8D6821;
 @COLOR-YellowDarkest:			#704E21;
 
-// DONE
-@COLOR-OrangeLightest:			#F7E0B6;
-@COLOR-OrangeLighter:			#F6CF88;
-@COLOR-OrangeLight:				#F5BC54;
+@COLOR-OrangeLightest:			#FAEDD4;
+@COLOR-OrangeLighter:			#F8D89B;
+@COLOR-OrangeLight:				#F6C25E;
 @COLOR-Orange:					#F5A61D;
 @COLOR-OrangeDark:				#D37A1B;
 @COLOR-OrangeDarker:			#B2581C;
 @COLOR-OrangeDarkest:			#924223;
 
-// DONE
-@COLOR-RustLightest:			#F7D1C0;
-@COLOR-RustLighter:			    #F6B698;
-@COLOR-RustLight:				#F5966B;
+@COLOR-RustLightest:			#FCEFEA;
+@COLOR-RustLighter:			    #F9D3C1;
+@COLOR-RustLight:				#F7AA86;
 @COLOR-Rust:					#F5733A;
 @COLOR-RustDark:				#D34A2B;
 @COLOR-RustDarker:			    #B33025;
 @COLOR-RustDarkest:			    #911E21;
 
-// DONE
-@COLOR-BrownLightest:			#B7A2A0;
-@COLOR-BrownLighter:			#A1847F;
-@COLOR-BrownLight:				#866259;
+@COLOR-BrownLightest:			#E1D9D9;
+@COLOR-BrownLighter:			#BDA8A6;
+@COLOR-BrownLight:				#96766F;
 @COLOR-Brown:					#693D32;
 @COLOR-BrownDark:				#442C27;
 @COLOR-BrownDarker:				#2B2221;
 @COLOR-BrownDarkest:			#1D1E21;
 
-// DONE
-@COLOR-GreyLightest:			#D7DAE0;
-@COLOR-GreyLighter:				#C0C5CD;
-@COLOR-GreyLight:				#A6ADB6;
+@COLOR-GreyLightest:			#E7E9ED;
+@COLOR-GreyLighter:				#CBD0D7;
+@COLOR-GreyLight:				#ADB4BC;
 @COLOR-Grey:					#8A949F;
 @COLOR-GreyDark:				#556375;
 @COLOR-GreyDarker:				#324156;
