--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -58,13 +58,19 @@
 
 {{#if js-flash}} 
 <script type="text/JavaScript">
-	require(["flash"], function() {
-		$('[data-flash]').click(function(e) {
-			e.preventDefault();
-			var json = $(this).data("flash");
-			$.flash(json);
-		});
-	});
+	require(["flash", "mustacheretriever"], function() {
+ 		$(".flash-trigger").click(function(e) {
+ 			e.preventDefault();
+
+			$.configretriever("flash", undefined, undefined, undefined, 
+				{ success: function(config) { 
+					$.mustacheretriever("flash", config, function(html) {
+						$.flash({html: html});
+					});
+				}
+			});
+ 		}); 		
+ 	});
 </script>
 {{/if}}
 
