--- a/assets/templates/toast.hbs
+++ b/assets/templates/toast.hbs
@@ -1,7 +1,7 @@
-<div class="toast popup{{#item.modifier}} toast--{{item.modifier}}{{/item.modifier}}{{#item.status}} {{item.status}}{{/item.status}}">
+<div class="toast popup{{#attribute.modifier}} toast--{{attribute.modifier}}{{/attribute.modifier}}{{#attribute.status}} {{attribute.status}}{{/attribute.status}}">
     <a href="?err=nojs&module=toast&action=close" class="toast__close">&times;</a>
     <div class="toast__icon">{{#content.icon}}
-        <i class="icon {{#item.modifier}}icon--{{item.modifier}}{{/item.modifier}}{{#item.size}} {{item.size}}{{/item.size}}"{{#content.title}} title="{{content.title}}"{{/content.title}} aria-hidden="true" role="img"></i>
+        <i class="icon {{#attribute.modifier}}icon--{{attribute.modifier}}{{/attribute.modifier}}{{#attribute.size}} {{attribute.size}}{{/attribute.size}}"{{#content.title}} title="{{content.title}}"{{/content.title}} aria-hidden="true" role="img"></i>
     {{/content.icon}}</div>
     <div class="toast__content">{{content.text}}</div>
     <div class="toast__progress"></div>
