Revert "Fixed flashes..."
This reverts commit b60d066a8a9f6743092b81f5081824edcc9e90b1.

--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -58,19 +58,13 @@
 
 {{#if js-flash}} 
 <script type="text/JavaScript">
-	require(["flash", "mustacheretriever"], function() {
- 		$(".flash-trigger").click(function(e) {
- 			e.preventDefault();
-
-			$.configretriever("flash", undefined, undefined, undefined, 
-				{ success: function(config) { 
-					$.mustacheretriever("flash", config, function(html) {
-						$.flash({html: html});
-					});
-				}
-			});
- 		}); 		
- 	});
+	require(["flash"], function() {
+		$('[data-flash]').click(function(e) {
+			e.preventDefault();
+			var json = $(this).data("flash");
+			$.flash(json);
+		});
+	});
 </script>
 {{/if}}
 
