--- a/content/Components/flashes.hbs
+++ b/content/Components/flashes.hbs
@@ -63,7 +63,9 @@ js-flash: true
 		            </header>
                     <div class="section__body">
 
-		            	<a href="#" class="button flash-trigger">Click here to see a live flash</a>
+		            	<a href="#" class="button" data-flash='{"item": {"modifier": "","status": "success"},"content": {"text": "This is a flash message and it wont go away until you click the close button!","icon": [{"item": {"modifier": "tick7","size": "xlarge"},"content": {"title": ""}}]}}'>Click here to see a live flash</a>
+
+		            	<a href="#" class="button" data-flash='{"item": {"modifier": "","status": "warn"},"content": {"text": "This is a warning - youve been warned!","icon": [{"item": {"modifier": "tick7","size": "xlarge"},"content": {"title": ""}}]}}'>Click here to see another example</a>
 		            	<!-- end of code -->
 			        </div>
 
