Creating new startup page and seperation

--- a/assets/less/base_modules/article.less
+++ b/assets/less/base_modules/article.less
@@ -31,7 +31,7 @@
 
 .article__title {
 	margin-bottom: 0;
-	._font-size (@TYPE-SIZE-Omega);
+	._font-size (@TYPE-SIZE-Alpha);
 }
 
 .article__subtitle {
