--- a/assets/less/base_modules/toast.less
+++ b/assets/less/base_modules/toast.less
@@ -42,7 +42,7 @@
         bottom: -100px;
         right: 20px;
         z-index: @Z-INDEX-Level9;
-        ._transition (bottom, 0.5s, @ACCORDION-Anim);
+        ._transition (bottom, 0.5s, @TOAST-Anim);
         ._depth-3();
         ._margin-left (20);
 
