--- a/assets/less/modules/ALLOY.less
+++ b/assets/less/modules/ALLOY.less
@@ -8,6 +8,12 @@
 // Styles specifically only used by the toolkit site
 // ----------------------------------------------------
 
+.m--startup {
+  .main {
+    ._padding-top(@TYPE-LineHeight*2);
+  }
+}
+
 .logo {
     ._inline-block();
 }
