--- a/content/Alloy/Examples/article.hbs
+++ b/content/Alloy/Examples/article.hbs
@@ -29,11 +29,8 @@ page-category: "examples"
 <main class="main">
 	<div class="w w--headlines">
 		<div class="g">
-		    <div class="c__lg--3-16 c__md--1-2">
-		    [LOGIN/REGISTER]
-		    </div>
-		    <div class="c__lg--13-16 c__md--1">
-		    [REASONS]
+		    <div class="c--1">
+		    	{{> article article }}
 		    </div>
 		</div>
 	</div>
