--- a/content/_partials/section.hbs
+++ b/content/_partials/section.hbs
@@ -6,7 +6,7 @@
 
         <div class="section__body">
 	        <!-- code -->
-				{{content.body}}
+            {{{content.body}}}
 	        <!-- end of code -->
         </div>
 
