Creating new startup page and seperation

--- a/assets/less/base/_alloy.less
+++ b/assets/less/base/_alloy.less
@@ -5,10 +5,9 @@
 // BASE - Order !important
 // ----------------------------------------------------
 
-@import "../variables.less";
 @import "calculations.less";
 @import "css3.less";
 @import "normalize.less";
 @import "typography.less";
 @import "grid.less";
-@import "prettify.less";
+@import "highlight.less";
