--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -248,6 +248,8 @@
 @MODULE-Print:                  true;
 @MODULE-Story:             		true;
 @MODULE-RTE:					true;
+@MODULE-Stage:                  true;
+@MODULE-SideMenu:               true;
 @MODULE-Tabs:                   true;
 @MODULE-Toast:                  true;
 @MODULE-Tooltip:                true;
