--- a/assets/less/base/typography.less
+++ b/assets/less/base/typography.less
@@ -113,7 +113,7 @@ samp {
 
 pre {
     white-space: pre;
-    white-space: pre-w;
+    white-space: pre-wrap;
     word-w: break-word;
     
     code {
