--- a/assets/less/startup.less
+++ b/assets/less/startup.less
@@ -5,6 +5,7 @@
 // LOAD ALLOY
 // ----------------------------------------------------
 
+@import "startup-vars.less";
 @import "base/_alloy.less";
 
 // BASE MODULES
@@ -46,11 +47,13 @@
 //@import "base_modules/panel.less";
 //@import "base_modules/popover.less";
 @import "base_modules/section.less";
+@import "base_modules/stage.less";
 //@import "base_modules/story.less";
 //@import "base_modules/table.less";
 //@import "base_modules/tabs.less";
 //@import "base_modules/tooltip.less";
 //@import "base_modules/well.less";
+@import "base_modules/sidemenu.less";
 //@import "base_modules/tags.less";
 @import "base_modules/toast.less";
 @import "base_modules/image.less";
