--- a/assets/less/base/css3.less
+++ b/assets/less/base/css3.less
@@ -69,27 +69,6 @@
 
 }
 
-// COLOURS
-// ----------------------------------------------------
-
-// RGBA MIXIN Source: https://gist.github.com/Daniel15/2549243
-// ----------------------------------------------------
-
-._background-color (@colour, @alpha) {
-    @alphaColour: hsla(hue(@colour), saturation(@colour), lightness(@colour), @alpha);
-    @ieAlphaColour: argb(@alphaColour);
- 
-    background-color: @colour; // Fallback for older browsers 
-     
-    // IE hacks
-    zoom: 1; // hasLayout
-    background-color: transparent\9;
-    -ms-filter:  "progid:DXImageTransform.Microsoft.gradient(startColorstr=@{ieAlphaColour}, endColorstr=@{ieAlphaColour})"; // IE 8+
-        filter: ~"progid:DXImageTransform.Microsoft.gradient(startColorstr=@{ieAlphaColour}, endColorstr=@{ieAlphaColour})"; // IE 6 & 7
-
-    background-color: @alphaColour; 
-}
-
 // BOX SHADOW
 // ----------------------------------------------------
 
@@ -269,4 +248,40 @@
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     hyphens: auto;
+}
+
+// RGBA MIXIN Source: https://gist.github.com/Daniel15/2549243
+// ----------------------------------------------------
+
+._background-color (@colour, @alpha) {
+    @alphaColour: hsla(hue(@colour), saturation(@colour), lightness(@colour), @alpha);
+    @ieAlphaColour: argb(@alphaColour);
+ 
+    background-color: @colour; // Fallback for older browsers 
+     
+    // IE hacks
+    zoom: 1; // hasLayout
+    background-color: transparent\9;
+    -ms-filter:  "progid:DXImageTransform.Microsoft.gradient(startColorstr=@{ieAlphaColour}, endColorstr=@{ieAlphaColour})"; // IE 8+
+        filter: ~"progid:DXImageTransform.Microsoft.gradient(startColorstr=@{ieAlphaColour}, endColorstr=@{ieAlphaColour})"; // IE 6 & 7
+
+    background-color: @alphaColour; 
+}
+
+// OVERLAY
+// ----------------------------------------------------
+
+._overlay (@color: rgba(0, 0, 0, 0.5)) {
+    position: relative;
+
+    &:before {
+        background-color: @color;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        content: "";
+    }
 }
